исправвил методы